# cppSpace

1Plan/: 6_month_plan_overview.md  Deep_Learning_CPP_Career_Path.md  git.md  jprofile.txt  myThoughts.txt
1Plan/deepLearning/: Embedded_ML_Engineer_Path.md  ML_Infrastructure_Engineer_Path.md
1Plan/system programming/: linux_system_programming_topics.md
1prompt/: prompt.md
Algo/slidingWindows/: anagrams_sliding_window.md  sliding_window_protocol.md  sliding_window_technique.md
Assignment/initial/: 01_thread_basics.md  02_std_thread.md  03_thread_lifecycle_management.md  04_mutexes_locks.md  07_atomic_operations.md  08_memory_model_ordering.md  README_concurrency_topics.md
Cpp-Workbook/: interview QA.md
Cpp-Workbook/Concurrency Advance/: README.md  assignment_01_advanced_thread_management.md  assignment_02_mutex_lock_strategies.md  assignment_03_deadlock_prevention_detection.md  assignment_06_lock_free_data_structures.md  assignment_07_futures_promises_async.md  assignment_08_12_advanced_topics.md
Cpp-Workbook/concurrencyFeatures/: cpp17_concurrency.md  (+1 more)
Linux/: boot_process.md
Month01/: Month_01_Detailed_Plan.md
aix-scripts/: aix_enhanced_timeout.sh  aix_system_monitor.sh  aix_timeout.sh  check_prerequisites.sh  discover_storeonce.sh  master_monitor.sh  network_monitor.sh  oracle_rman_monitor.sh  quick_timeout_test.sh  realtime_monitor.sh  run_35_hour_monitoring.sh  storage_monitor.sh  test_aix72_compatibility.sh  test_power10_compatibility.sh
backup/: learning-cv2026.docx  learning-cv2026.md
careerPath/: careerOption.md  learning.md  staff_principal_career_path.md
cppTopics/: forwardingReferance.md  rvalue_lvalue.md  senior_cpp_interview_topics.md
designPattern/: 01_singleton.cpp  02_factory_method.cpp  04_builder.cpp  05_prototype.cpp  06_observer.cpp  07_strategy.cpp  08_decorator.cpp  09_adapter.cpp  README.md
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DESIGN.md  README.md
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/.github/workflows/: ci.yml
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/benchmarks/: bench_main.cpp
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/benchmarks/results/: .gitkeep
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/design/: architecture.md
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/design/decisions/: ADR-001-weak-ptr-subscribers.md  ADR-002-pimpl-all-public.md
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/docs/: build.md  lessons-learned.md  usage.md
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/include/event_nexus/: event.h  event_bus.h  event_dispatcher.h  event_nexus.h  subscriber.h  thread_pool.h
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/src/: main.cpp
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/src/core/: event_bus.cpp  event_dispatcher.cpp  thread_pool.cpp
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/tests/stress/: concurrent_pub_sub_test.cpp
effectiveCpp/ch4-smartPointer/projects-cpp/event-nexus/tests/unit/: event_bus_test.cpp  event_dispatcher_test.cpp  thread_pool_test.cpp
memoryModel/: cpp_memory_model_tutorial.md  memory_model_exercises.md
modernCpp-exercise/: 01_smart_pointers.cpp  02_move_semantics.cpp  03_lambda_expressions.cpp  04_templates_concepts.cpp  05_stl_algorithms.cpp  06_concurrency.cpp  07_misc_features.cpp  README.md  SOLUTIONS.md
myself2025/project/saphana-thread-pool/: CMakeLists.txt  Makefile  README.md  interview_questions.md  saphana_design_patterns.md  sliding_pool_demo
myself2025/project/saphana-thread-pool/include/: BackupOperation.h  IOperation.h  OperationThread.h  OperationTypes.h  RestoreOperation.h
myself2025/project/saphana-thread-pool/src/: BackupOperation.cpp  Operation.cpp  OperationThread.cpp  RestoreOperation.cpp  main.cpp
myself2025/project/thread-pool-modern/: CMakeLists.txt  Makefile  README.md  interview_questions.md  thread_pool_demo
myself2025/project/thread-pool-modern/include/: Command.h  Thread.h  ThreadPoolMgr.h
myself2025/project/thread-pool-modern/src/: Command.cpp  Thread.cpp  ThreadPoolMgr.cpp  main.cpp
project/: modern_cpp_learning_project.md
sanitizers/: Makefile  README.md  asan_01  asan_01_buffer_overflow.cpp  asan_02_stack_overflow.cpp  asan_03_use_after_free.cpp  asan_04_double_free.cpp  asan_05_memory_leak.cpp  tsan_01_basic_race.cpp  tsan_02_shared_counter.cpp  tsan_03_lazy_init.cpp  tsan_04_vector_race.cpp
(+216 files in other folders)
